--- a/_config.yml
+++ b/_config.yml
@@ -56,9 +56,11 @@ google_analytics: UA-155200651-1 # out your google-analytics code
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio  # your blog must have a name for it to show up in the nav bar
+blog_name: Priyal's-blog  # your blog must have a name for it to show up in the nav bar
 blog_description: a simple whitespace theme for academics
 permalink: /blog/:year/:title/
+
+resume : true
 
 # Pagination
 pagination:
