added link to wordpress for previous posts

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: Priyal Aggarwal
-email: priyal.aggarwal@columbia.edu
+email: firstname.lastname@columbia.edu
 description: > # this means to ignore newlines until "url:"
   Master of Science in Computer Science | Columbia University
 footer_text: >
