--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ pagination:
   enabled: true
 
 # Comments
-disqus_shortname: al-folio # put your disqus shortname
+disqus_shortname: "https://priyalaggarwal.github.io/" # put your disqus shortname
 
 # -----------------------------------------------------------------------------
 # Collections
